updated fa icons

--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Relevant Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
@@ -45,7 +45,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:jstafford3344@gmail.com">jstafford3344@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Dedicated, hardworking IT Operations professional with years of experience supporting financial exchange infrastructure. Technology enthusiast, lifelong learner and aspiring developer. Long way to go until we get there. Check <a href="https://getsporttrade.com/" target="_blank">Sporttrade</a> out. This project was based on an online course created by John Elder at Codemy and utilizes a very basic Flask backend.</p>
+                    <p class="lead mb-5">Dedicated, hardworking IT Operations professional with years of experience supporting financial exchange infrastructure. Technology enthusiast, lifelong learner and aspiring developer. Long way to go until we get there. Check <a href="https://getsporttrade.com/" target="_blank">Sporttrade</a> out. This project was based on an online course created by John Elder at Codemy and utilizes a very basic Flask backend. Please email me at the above address to connect.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/joseph-stafford-mba-38082a34/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/jstafford3344" target="_blank"><i class="fab fa-github"></i></a>
@@ -56,7 +56,7 @@
             <!-- Experience-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
+                    <h2 class="mb-5">Relevant Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Trading Operations Manager</h3>
@@ -85,9 +85,9 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Team Lead</h3>
                             <div class="subheading mb-3">Nasdaq Fixed Income</div>
-                            <p>Lead team of three Market Operations Analysts supporting Nasdad Fixed Income trading venue for US Treasuries. Served as SME for question related to FIX protocol (and other Nasdaq propietary protocols)</p>
+                            <p>Lead team of three Market Operations Analysts supporting Nasdad Fixed Income trading venue for US Treasuries. Served as SME for question related to FIX protocol (and other Nasdaq propietary protocols). Worked with Nasdaq sales teams and prospective new trading members to ensure any of their questions regarding colocation, connectivity, application protocols were answered throughly during the onboarding process. Coordinated overnight support coverage with an overseas team based in Hong Kong and Stockholm to ensure there was sufficient monitoring during APAC and London trading hours.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2019 - June 2019</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
@@ -95,7 +95,7 @@
                             <div class="subheading mb-3">Nasdaq Fixed Income</div>
                             <p>Provided first line support for Nasdaq's Broker Dealer participants. Fielded a variety of inquiries including but not limited to connectivity, clearing instructions, reference data, order entry and market data protocols. Worked with traders, middle office and back office personnel, as well as developers, network engineers and DevOps. Received recognition from the Nasdaq CEO related to efforts migrating backend from a legacy protocol to a new Nasdaq protocol in 2018.</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">June 2018 - February 2019</span></div>
                     </div>
                 </div>
             </section>
@@ -121,14 +121,14 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">University of Chicago</h3>
-                            <div class="subheading mb-3">DevOps Professional Certification</div>
-                            <p>6 month professional certification program through the University of Chiacgo. Course mainly covered the CI/CD pipeline and the portfolio project included setting up a CI/CD pipeline using Git, Github, Github Actions, Makefiles, Docker, Jenkins and Artifactory.</p>
+                            <div class="subheading mb-3"><a href="https://professional.uchicago.edu/find-your-fit/courses/devops">DevOps Professional Certification</a></div>
+                            <p>6 month professional certification program through the University of Chicago. Course mainly covered the CI/CD pipeline and the portfolio project included setting up a CI/CD pipeline using Git, Github, Github Actions, Makefiles, Docker, Kubernetes, Jenkins and Artifactory.</p>
                         </div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Nucamp</h3>
-                            <div class="subheading mb-3">Full Stack Software Engineering Bootcamp</div>
+                            <div class="subheading mb-3"><a href="https://www.nucamp.co/complete-bootcamp/software-engineering"></a>Full Stack Software Engineering Bootcamp</div>
                             <p>Coursework Included: </p>
                             <ul>
                                 <li>React</li>
@@ -137,6 +137,9 @@
                                 <li>Django</li>
                                 <li>General Python</li>
                                 <li>Object-Oriented Programming</li>
+                                <li>Relational Databases - PostgreSQL & MySQL</li>
+                                <li>MongoDB & Mongoose</li>
+                                <li>Docker & Docker Compose</li>
                             </ul>
                         </div>
                     </div>
@@ -149,11 +152,15 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-python"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-golang"></i></li>
                         <li class="list-inline-item"><i class="fab fa-react"></i></li>
                         <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-linux"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-docker"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
+                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
                         <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
                         <li class="list-inline-item"><i class="fab fa-npm"></i></li>
                     </ul>
