chore: added Dockerfile

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,5 +4,5 @@
 {% endblock %}
 <br/><br/>
 <center>
-    <footer>Copyright 2023 J. Stafford</footer>
+    <footer>This project was c2023 J. Stafford</footer>
 </center>
