--- a/templates/index.html
+++ b/templates/index.html
@@ -45,7 +45,7 @@
                     <div class="subheading mb-5">
                         <a href="mailto:jstafford3344@gmail.com">jstafford3344@gmail.com</a>
                     </div>
-                    <p class="lead mb-5">Dedicated, hardworking IT Operations professional with years of experience supporting financial exchange infrastructure. Technology enthusiast, lifelong learner and aspiring developer. Long way to go until we get there. Check <a href="https://getsporttrade.com/" target="_blank">Sporttrade</a> out. This project was based on an online course created by John Elder at Codemy and utilizes a very basic Flask backend. Please email me at the above address to connect.</p>
+                    <p class="lead mb-5">Dedicated, hardworking IT operations professional with years of experience supporting financial exchange infrastructure. Technology enthusiast, lifelong learner and aspiring developer. Long way to go until we get there. Check <a href="https://getsporttrade.com/" target="_blank">Sporttrade</a> out. This project was based on an online course created by John Elder at Codemy and utilizes a very basic Flask backend. Please email me at the above address to connect.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/joseph-stafford-mba-38082a34/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/jstafford3344" target="_blank"><i class="fab fa-github"></i></a>
@@ -131,6 +131,7 @@
                             <div class="subheading mb-3"><a href="https://www.nucamp.co/complete-bootcamp/software-engineering"></a>Full Stack Software Engineering Bootcamp</div>
                             <p>Coursework Included: </p>
                             <ul>
+                                <li>HTML, CSS & Vanilla JavaScript</li>
                                 <li>React</li>
                                 <li>Node</li>
                                 <li>Express</li>
@@ -168,7 +169,7 @@
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Knowledgeable in Git workflows
+                            Knowledgeable in Git workflows and GitOps
                         </li>
                         <li>
                             <span class="fa-li"><i class="fas fa-check"></i></span>
@@ -198,6 +199,8 @@
                     <p class="mb-0">In addition to reading, I watch a ton (too much) television, with favorite shows like The Office (classic), Arrested Development, Ozark, Succession, etc. Moved to Philadelphia about 2 years with my wife and Dachshund and enjoy visiting new places in the neighborhood and city.</p><br/>
                     <p class="mb-0">I am big on professional development for both myself and my team and have a laundry list of things that I would like to accomplish in my free time to further my skillset. This project is actually one of them. Some others include: <br/>
                         <ul>
+                            <li>React and using React to render meaningful data.</li>
+                            <li>On-prem and cloud native application deployment.</li>
                             <li>Better understanding Golang and strongly typed languages.</li>
                             <li>Utilizing ORMs for writing data to databases.</li>
                             <li>Creating applications using OOP concepts.</li>
